--- a/css/style.css
+++ b/css/style.css
@@ -75,11 +75,21 @@ ul.menu li
 	padding:15px 0px 15px 0px;
 }
 
-
 ul.menu li.active ,ul.menu li:hover
 {
 	background-color:#272727;
+	border-right:1px solid #0e0e0e;
+	border-left:1px solid #0e0e0e;
 }
+
+ul.menu > li:last-child:hover
+{
+	background-color:#272727;
+	border-right:0px solid #0e0e0e;
+	border-left:1px solid #0e0e0e;
+}
+
+
 
 ul.menu li a
 {
@@ -92,8 +102,9 @@ ul.menu li img
 {
 	height:32px;
 	width:32px;
-	border-radius: 50px;
+	border-radius: 10px;
 	margin-left:15px;
+	margin-top:-5px;
 }
 
 #main
@@ -103,7 +114,8 @@ ul.menu li img
 
 #main nav
 {
-
+    padding-left:0px;
+	padding-right:0px;
 }
 
 #main nav ul li
@@ -115,6 +127,9 @@ ul.menu li img
 	font-family: ubuntu;
 }
 
+#main nav ul li span {
+    float:right;
+}
 
 #main nav ul li.active , #main nav ul li:hover
 {
@@ -177,6 +192,8 @@ ul.menu li img
 	border-left:1px solid #48A9EC;
 	margin-top:-10px;
 	min-height:450px;
+	padding-left:0px;
+	padding-right:0px;
 }
 
 #content #title_panel
@@ -185,6 +202,7 @@ ul.menu li img
 	background-color:white;
 	font-family: ubuntu;
 	padding-left:30px;
+	padding-top:15px;
 	height:50px;
 }
 
@@ -192,7 +210,6 @@ ul.menu li img
 {
 	font-size: 18px;
 	margin:0px;
-	margin-top:15px;
 }
 
 #content #title_panel .breadcrumb
