Add new chart librariy morris.js and add charts to the dashboard

--- a/css/style.css
+++ b/css/style.css
@@ -201,10 +201,13 @@ ul.menu li img
 	border-bottom:1px solid #CFCDC1;
 	background-color:white;
 	font-family: ubuntu;
-	padding-left:30px;
+	padding-left:10px;
 	padding-top:15px;
 	height:50px;
 }
+
+
+
 
 #content #title_panel h3
 {
@@ -212,11 +215,9 @@ ul.menu li img
 	margin:0px;
 }
 
-#content #title_panel .breadcrumb
+#content > div
 {
-	margin:0px;
-	margin-top:7px;
-	background-color: transparent;
+	padding:15px;
 }
 
 #content.red-content
@@ -224,6 +225,10 @@ ul.menu li img
 	border-top:2px solid #48A9EC;
 }
 
+#canvas-holder{
+    width:30%;
+    float:left;
+}
 
 footer
 {
@@ -238,4 +243,23 @@ footer
 	border-bottom-right-radius:5px;
 	opacity:0.9;
 	padding:10px;
+}
+
+
+table.stats {
+	width:100%;
+}
+
+table.stats tr {
+	border-bottom:1px dotted #ddd;
+}
+
+table.stats tr td{
+	padding:5px;
+	border-bottom:1px dotted #ddd;
+}
+
+
+table.stats tr span {
+	float:right;
 }
