--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,12 @@ ul.menu > li:last-child:hover
 	border-left:1px solid #0e0e0e;
 }
 
-
+ul.menu > li:first-child:hover
+{
+	background-color:#333;
+	border-right:0px solid #0e0e0e;
+	border-left:0px solid #0e0e0e;
+}
 
 ul.menu li a
 {
@@ -247,6 +252,7 @@ footer
 
 
 table.stats {
+
 	width:100%;
 }
 
@@ -263,3 +269,42 @@ table.stats tr td{
 table.stats tr span {
 	float:right;
 }
+
+
+/* Dark Search Box */
+.searchBox {
+    background-color: #555;
+    background: url(../images/search-dark.png) no-repeat 10px 6px #555;
+    border: 0 none;
+    font: bold 12px Arial,Helvetica,Sans-serif;
+    color: #d7d7d7;
+    width:150px;
+    padding: 6px 15px 6px 35px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 3px rgba(0, 0, 0, 0.2) inset;
+    -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 3px rgba(0, 0, 0, 0.2) inset;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 3px rgba(0, 0, 0, 0.2) inset;
+}
+
+.searchBox input[type="text"]:focus {
+    background: url(../images/search-dark.png) no-repeat 10px 6px #fcfcfc;
+    color: #6a6f75;
+    width: 200px;
+    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(0, 0, 0, 0.9) inset;
+    -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(0, 0, 0, 0.9) inset;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(0, 0, 0, 0.9) inset;
+    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    outline-style: none;
+    border-color: inherit;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    box-shadow:none;
+    border-color:transparent;
+
+}
+
+
+
