Create tables page

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 body
 {
-	background-image: url("../images/header.jpg");
+	background-image: url("../images/background.jpg");
 	unicode-bidi: embed;
     background-repeat: no-repeat;
     background-position: top center;
