--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,8 @@ ul.menu li
 	float:left;
 	height: 50px;
 	padding:15px 0px 15px 0px;
+    border-right:1px solid #333;
+	border-left:1px solid #333;
 }
 
 ul.menu li.active ,ul.menu li:hover
