--- a/css/gridview.css
+++ b/css/gridview.css
@@ -3,10 +3,9 @@
     Output device: screen, projection
 
     Author:     Mohanad Shab Kaleia
-    email : 	m.kaleia@computech-sy.com
+    email : 	ms.kaleia@gmail.com
     Update:     2013-02-26, 16:05 GMT+1
     Version:    1.0.0
-    Copyright : CompuTech Group , www.computech-sy.com , contact@computech-sy.com
     Structure:
         display; position; z-index; float; clear; width; height; overflow; margin; padding; border; background; align; font;
 
