--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 body
 {
-	background-image: url("../images/background.jpg");
+	background-color: dimgrey;
 	unicode-bidi: embed;
     background-repeat: no-repeat;
     background-position: top center;
@@ -229,7 +229,7 @@ ul.menu li img
 
 #content.red-content
 {
-	border-top:2px solid #48A9EC;
+	border-top:0px solid #48A9EC;
 }
 
 #canvas-holder{
