--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,11 @@
 @font-face{font-family:'FontAwesome';src:url('font/fontawesome-webfont.eot?v=4.0.1');src:url('font/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'),url('font/fontawesome-webfont.woff?v=4.0.1') format('woff'),url('font/fontawesome-webfont.ttf?v=4.0.1') format('truetype'),url('font/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');font-weight:normal;font-style:normal;}
 
-* , #main
-{
+* , #main {
 	margin:0;
 	padding:0;
 }
 
-body
-{
+body {
 	unicode-bidi: embed;
     background-repeat: no-repeat;
     background-position: top center;
@@ -15,25 +13,12 @@ body
     background-size: cover;
 }
 
-a
-{
+a {
 	text-decoration: none;
 }
 
-li
-{
+li {
 	list-style-type: none;
-}
-
-
-
-#index_menu
-{
-	height:30px;
-	background-color:#CBCBCB;
-	border-top-left-radius:2px;
-	border-top-right-radius:2px;
-	opacity:0.9;
 }
 
 #tool_bar
@@ -42,19 +27,34 @@ li
 	opacity:0.9;
 	color:#333;
 	font-family:ubuntu;
+    margin-bottom:10px;
+	-webkit-box-shadow: 0px 1px 5px rgba(100, 100, 100, 0.49);
+    -moz-box-shadow:    0px 1px 5px rgba(100, 100, 100, 0.49);
+    box-shadow:         0px 1px 5px rgba(100, 100, 100, 0.49);
+    position: relative;
+    z-index: 1000;
 }
 
-#tool_bar > ul.title >li {
+
+
+#tool_bar  ul.title >li {
 	float:left;
-	padding:15px 0px 0px 25px;
+    height:50px;
+	padding:15px 15px 0px 15px;
 }
 
-ul.menu
+#tool_bar  ul.title >li > h1 {
+	margin:0;
+	padding:0;
+	font-size:18px;
+}
+
+#tool_bar > ul.menu
 {
 	float:right;
 }
 
-ul.menu li
+#tool_bar  ul.menu > li
 {
 	float:left;
 	height: 50px;
@@ -63,28 +63,13 @@ ul.menu li
 	padding-right:15px;
 }
 
-ul.menu li.active ,ul.menu li:hover
-{
-
-}
-
-ul.menu > li:last-child:hover
-{
-
-}
-
-ul.menu > li:first-child:hover
-{
-
-}
-
-ul.menu li a
+#tool_bar  ul.menu > li > a
 {
 	color:#333;
 	text-decoration: none;
 }
 
-ul.menu li img
+#tool_bar  ul.menu > li > a > img
 {
 	height:32px;
 	width:32px;
@@ -94,7 +79,21 @@ ul.menu li img
 	vertical-align: middle;
 }
 
-ul.menu > li > a > i> .badge {
+#tool_bar  ul.menu > li > dropdown-menu {
+    /*
+    display: block;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 300ms ease;
+  -moz-transition: all 300ms ease;
+  -webkit-transition: all 300ms ease;
+  -o-transition: all 300ms ease;
+  -ms-transition: all 300ms ease;
+  margin-top: 40px!important;*/
+
+}
+
+#tool_bar  ul.menu > li > a > i> .badge {
     font-family: "Open Sans", sans-serif;
     position: absolute;
     top: -12px;
@@ -106,12 +105,6 @@ ul.menu > li > a > i> .badge {
     -moz-transition: all 0.1s ease-in-out;
     -o-transition: all 0.1s ease-in-out;
     transition: all 0.1s ease-in-out;
-}
-
-
-#main
-{
-	background-color:#474747;
 }
 
 #main nav
@@ -191,10 +184,7 @@ ul.menu > li > a > i> .badge {
 }
 
 header {
-	margin-bottom:10px;
-	-webkit-box-shadow: 0px 1px 5px rgba(100, 100, 100, 0.49);
-    -moz-box-shadow:    0px 1px 5px rgba(100, 100, 100, 0.49);
-    box-shadow:         0px 1px 5px rgba(100, 100, 100, 0.49);
+
 }
 
 #content
