--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @font-face{font-family:'FontAwesome';src:url('font/fontawesome-webfont.eot?v=4.0.1');src:url('font/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'),url('font/fontawesome-webfont.woff?v=4.0.1') format('woff'),url('font/fontawesome-webfont.ttf?v=4.0.1') format('truetype'),url('font/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');font-weight:normal;font-style:normal;}
 
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700);
+
 * , #main {
 	margin:0;
 	padding:0;
@@ -21,10 +23,8 @@ li {
 	list-style-type: none;
 }
 
-#tool_bar
-{
+#tool_bar {
 	height:50px;
-	opacity:0.9;
 	color:#333;
 	font-family:ubuntu;
     margin-bottom:10px;
@@ -33,6 +33,7 @@ li {
     box-shadow:         0px 1px 5px rgba(100, 100, 100, 0.49);
     position: relative;
     z-index: 1000;
+    margin: 0;
 }
 
 
@@ -40,8 +41,26 @@ li {
 #tool_bar  ul.title >li {
 	float:left;
     height:50px;
-	padding:15px 15px 0px 15px;
+	padding-top:15px;
+	padding-right:15px
 }
+
+#tool_bar  ul.title >li:last-child{
+	float:right;
+}
+
+#tool_bar  ul.title >li.site-icon {
+    color:cadetblue;
+    font-size: 20px;
+    margin-top: -5px;
+}
+
+#tool_bar  ul.title >li.site-icon {
+    color:cadetblue;
+    font-size: 18px;
+
+}
+
 
 #tool_bar  ul.title >li > h1 {
 	margin:0;
@@ -57,16 +76,16 @@ li {
 #tool_bar  ul.menu > li
 {
 	float:left;
-	height: 50px;
-	padding-top:20px;
-	padding-left:15px;
-	padding-right:15px;
 }
 
 #tool_bar  ul.menu > li > a
 {
 	color:#333;
 	text-decoration: none;
+    height: 50px;
+	padding-top:20px;
+	padding-left:15px;
+	padding-right:15px;
 }
 
 #tool_bar  ul.menu > li > a > img
@@ -354,3 +373,55 @@ table.stats tr span {
     color: #FFF;
 }
 
+/* Search box */
+#searchBoxWrap {
+  padding-right: 15px;
+  position: relative;
+}
+
+input[type="text"] {
+  height: 40px;
+  font-size: 20px;
+  display: inline-block;
+  font-family: Ubuntu;
+  border: none;
+  outline: none;
+  color: #555;
+  padding: 3px;
+  padding-right: 60px;
+  width: 0px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: none;
+  z-index: 3;
+  transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
+  cursor: pointer;
+}
+
+input[type="text"]:focus:hover {
+  border-bottom: 1px solid #BBB;
+}
+
+input[type="text"]:focus {
+  width: 300px;
+  z-index: 1;
+  border-bottom: 1px solid #BBB;
+  cursor: text;
+}
+.searchIcon{
+    padding-top: 20px;
+    padding-left: 15px;
+    pading-right: 15px;
+    border: none;
+    position: relative;
+    top: 0;
+    z-index: 1;
+    cursor: pointer;
+    transition: opacity .4s ease;
+    background:none;
+}
+
+.searchIcon:hover {
+  opacity: 0.8;
+}
