--- a/css/style.css
+++ b/css/style.css
@@ -98,18 +98,12 @@ li {
 	vertical-align: middle;
 }
 
-#tool_bar  ul.menu > li > dropdown-menu {
-    /*
-    display: block;
-  visibility: hidden;
-  opacity: 0;
-  transition: all 300ms ease;
-  -moz-transition: all 300ms ease;
-  -webkit-transition: all 300ms ease;
-  -o-transition: all 300ms ease;
-  -ms-transition: all 300ms ease;
-  margin-top: 40px!important;*/
+#tool_bar  ul.menu > li > ul.dropdown-menu li i {
+   color:cadetblue;
+}
 
+#tool_bar  ul.menu > li > ul.dropdown-menu li a span {
+	margin-left:10px;
 }
 
 #tool_bar  ul.menu > li > a > i> .badge {
@@ -425,3 +419,28 @@ table.stats tr span {
 #searchBoxWrap .searchIcon:hover {
   opacity: 0.8;
 }
+
+/* Drop down customization */
+.dropdown-menu:before {
+  position: absolute;
+  top: -7px;
+  left: 9px;
+  display: inline-block;
+  border-right: 7px solid transparent;
+  border-bottom: 7px solid #ccc;
+  border-left: 7px solid transparent;
+  border-bottom-color: rgba(0, 0, 0, 0.2);
+  content: '';
+}
+
+.dropdown-menu:after {
+  position: absolute;
+  top: -6px;
+  left: 10px;
+  display: inline-block;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #ffffff;
+  border-left: 6px solid transparent;
+  content: '';
+}
+
