--- a/css/style.css
+++ b/css/style.css
@@ -28,15 +28,10 @@ li {
 	color:#333;
 	font-family:ubuntu;
     margin-bottom:10px;
-	-webkit-box-shadow: 0px 1px 5px rgba(100, 100, 100, 0.49);
-    -moz-box-shadow:    0px 1px 5px rgba(100, 100, 100, 0.49);
-    box-shadow:         0px 1px 5px rgba(100, 100, 100, 0.49);
     position: relative;
     z-index: 1000;
     margin: 0;
 }
-
-
 
 #tool_bar  ul.title >li {
 	float:left;
@@ -118,6 +113,40 @@ li {
     -moz-transition: all 0.1s ease-in-out;
     -o-transition: all 0.1s ease-in-out;
     transition: all 0.1s ease-in-out;
+}
+
+
+#tool_bar ul.dropdown-menu {
+	border-top:1px #9c78cd solid;
+	border-radius:0;
+    padding:0px;
+    margin-top: 0px;
+    -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border-top: 1px solid rgba(0,0,0,0);
+    border-left: 1px solid #ececec;
+    border-right: 1px solid #ececec;
+    border-bottom: 1px solid #ececec;
+}
+
+#tool_bar ul.dropdown-menu li {
+	padding:0px;
+	margin:0px;
+}
+
+#tool_bar ul.dropdown-menu li span.badge, #tool_bar ul.dropdown-menu li i{
+	float:right;
+}
+
+
+#tool_bar ul.dropdown-menu li a{
+	margin:0px;
+	padding-top:10px;
+	padding-bottom:10px;
 }
 
 #main nav
@@ -206,12 +235,13 @@ header {
 	padding-left:0px;
 	padding-right:0px;
     background-color:#F2F2F2;
+    margin-top:-10px;
 }
 
 #content #title_panel
 {
 	border-bottom:1px solid #CFCDC1;
-	background-color:white;
+	background-color:#e8e8e8;
 	font-family: ubuntu;
 	padding-left:10px;
 	padding-top:15px;
@@ -421,26 +451,20 @@ table.stats tr span {
 }
 
 /* Drop down customization */
-.dropdown-menu:before {
-  position: absolute;
-  top: -7px;
-  left: 9px;
-  display: inline-block;
-  border-right: 7px solid transparent;
-  border-bottom: 7px solid #ccc;
-  border-left: 7px solid transparent;
-  border-bottom-color: rgba(0, 0, 0, 0.2);
-  content: '';
-}
-
 .dropdown-menu:after {
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  content: "";
+  display: inline-block;
+  right: 6%;
   position: absolute;
   top: -6px;
-  left: 10px;
-  display: inline-block;
-  border-right: 6px solid transparent;
-  border-bottom: 6px solid #ffffff;
-  border-left: 6px solid transparent;
-  content: '';
+  border-bottom: 6px solid #9c78cd;
+
+}
+
+ul.dropdown-menu {
+	border-top:1px #9c78cd solid;
+	border-radius:0;
 }
 
