--- a/css/style.css
+++ b/css/style.css
@@ -44,11 +44,14 @@ li {
 	float:left;
 	height: 60px;
 	padding-top:22px;
-	padding-right:15px
 }
 
 #tool_bar  ul.title >li:last-child{
 	float:right;
+}
+
+#tool_bar  ul.title >li:last-child a{
+    color: white;
 }
 
 #tool_bar  ul.title >li.site-icon {
@@ -150,6 +153,14 @@ li {
 	padding-bottom:10px;
 }
 
+#user-menu {
+    background-color:white;
+    height:61px;
+    position:fixed;
+    right:0;
+    top:0;
+}
+
 /* main content */
 #main {
     background-color: #32323A;
@@ -159,7 +170,6 @@ li {
 {
     padding-left:0px;
 	padding-right:0px;
-    margin-top:-10px;
 }
 
 #main nav ul li
@@ -169,7 +179,7 @@ li {
     background-color:#32323A;
 }
 
-#main nav ul li span {
+#main nav ul li span.badge {
     float:right;
 }
 
@@ -251,7 +261,6 @@ header {
 	padding-left:0px;
 	padding-right:0px;
     background-color:#F2F2F2;
-    margin-top:-10px;
 }
 
 #content #title_panel
@@ -292,17 +301,15 @@ footer
 {
 	display:block;
 	height:50px;
-	background-color:#333;
+	background-color:#E8E8E8;
 	opacity:0.9;
-	color:#999;
+	color: grey;
 	font-family:ubuntu;
-	border-top:4px solid #222;
-	border-bottom-left-radius:5px;
-	border-bottom-right-radius:5px;
 	opacity:0.9;
-	padding:10px;
-    margin-bottom: 50px;
+	padding:20px;
+    font-size: 12px;
 }
+
 
 
 table.stats {
